<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/blue"
    tools:context=".ui.Menu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/custom_header"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="54dp"
            android:layout_height="54dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ImageProfile"
                android:scaleType="fitXY"
                android:src="@drawable/teacher" />


        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/nameTeacherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/name_teacher"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/occupationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/teacher"
                android:textColor="@color/gray"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">


            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/close_icon"
                android:src="@drawable/ic_close" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>