<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Home">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/custom_header"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/menuOption"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_apps" />

        <LinearLayout
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/nameTeacherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/name_teacher"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/occupationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_medium"
                android:layout_marginStart="7dp"
                android:text="@string/teacher"
                android:textColor="@color/gray"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <androidx.cardview.widget.CardView
                android:layout_width="54dp"
                android:layout_height="54dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ImageProfile"
                    android:scaleType="fitXY"
                    android:src="@drawable/teacher" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/noticeTextCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/NoticeBoard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noticeRv"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeTextCenter" />

    <TextView
        android:id="@+id/Tarefas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomeWork"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeRv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeWorkRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tarefas" />


</androidx.constraintlayout.widget.ConstraintLayout>