<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SignIn">

    <FrameLayout
        android:id="@+id/loadingPage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#7F000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/CalenderViewCustom"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:background="@drawable/custom_header_login_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:fontFamily="@font/nunito_bold"
            android:textSize="40sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_text"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPersonName"
            tools:ignore="RtlSymmetry"
            android:autofillHints="Login" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_text"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawableEnd="@drawable/ic_eye_"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:paddingEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_text"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
             android:background="@drawable/custom_login_button_background"
           android:text="@string/signIn_text"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            />




    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="4dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="550dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/signin_custom_button"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/google_icon" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/nunito_bold"
                android:text="Continue com Google"
                android:textColor="@color/black" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/custom_logo_image_login"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/school_logo_login" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>